abp sponsor-logo visibility fix

--- a/app/assets/styles-sass/gui/components/_sponsor.scss
+++ b/app/assets/styles-sass/gui/components/_sponsor.scss
@@ -9,7 +9,8 @@
     }
 }
 
-.sponsor-logo {
+.sponsor-logo,
+.company-logo {
     margin-bottom: 2*$base-gutter;
 
     img {
